# geckosim

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
apps/web/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
apps/web/src/app/: layout.tsx  page.test.tsx  page.tsx
apps/web/src/components/: AgentInspector.test.tsx  AgentInspector.tsx  AgentList.tsx  ConnectionStatus.tsx  Controls.tsx  WorldScene.test.tsx  WorldScene.tsx
apps/web/src/lib/sim/: connection.tsx  reducer.test.ts  reducer.ts
apps/web/src/lib/world-scene/: model.test.ts  model.ts  runtime.ts  scene.test.ts  scene.ts
apps/web/src/types/sim/: AccessoryId.ts  AdvertisementId.ts  AgentId.ts  AgentSnapshot.ts  Building.ts  BuildingId.ts  BusinessId.ts  ClientMessage.ts  CrimeIncidentId.ts  CurrentActionView.ts  District.ts  DistrictId.ts  EmploymentId.ts  Facing.ts  Floor.ts  FloorId.ts  HouseholdId.ts  HousingId.ts  InteractionSpotId.ts  LeafArea.ts  LeafAreaId.ts  LeafKind.ts  MemoryEntryId.ts  Mood.ts  Needs.ts  ObjectId.ts  ObjectSnapshot.ts  ObjectTypeId.ts  OutdoorZoneKind.ts  Personality.ts  Phase.ts  PlayerInput.ts  Position.ts  PromotedEventId.ts  (+7 more)
content/: README.md
content/accessories/: bowtie.ron  sunglasses.ron
content/object_types/: chair.ron  fridge.ron
crates/content/: Cargo.toml
crates/content/src/: error.rs  lib.rs  loader.rs  validate.rs
crates/content/tests/: loader_smoke.rs  seed_loads.rs  smoke.rs  validation.rs
crates/core/: Cargo.toml
crates/core/src/: ids.rs  lib.rs  sim.rs  snapshot.rs
crates/core/src/agent/: mod.rs  spatial.rs
crates/core/src/decision/: mod.rs
crates/core/src/events/: mod.rs
crates/core/src/macro_/: mod.rs
crates/core/src/object/: mod.rs
crates/core/src/rng/: mod.rs
crates/core/src/save/: mod.rs
crates/core/src/systems/: memory.rs  mod.rs  mood.rs  movement.rs  needs.rs
crates/core/src/systems/decision/: decide.rs  effects.rs  execute.rs  interaction.rs  mod.rs  predicates.rs  scoring.rs
crates/core/src/time/: mod.rs
crates/core/src/world/: graph.rs  layout.rs  mod.rs  types.rs
crates/core/tests/: catalogs.rs  decision.rs  determinism.rs  mood.rs  needs_decay.rs  smoke.rs  snapshot.rs
crates/core/tests/common/: mod.rs
crates/host/: Cargo.toml
crates/host/src/: config.rs  demo.rs  lib.rs  main.rs  sim_driver.rs  ws_server.rs
crates/host/tests/: demo_seed.rs  ws_smoke.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  messages.rs
crates/protocol/tests/: roundtrip.rs  smoke.rs
docs/design/: 0001-project-vision.md  0002-tech-stack.md  0003-scale-target.md  0004-agent-decision-model.md  0005-emergence-style.md  0006-macro-micro-split.md  0007-world-spatial-model.md  0008-time-model.md  0009-macro-micro-seam.md  0010-systems-inventory.md  0011-agent-and-smart-object-schema.md  0012-rust-crate-architecture.md  0013-frontend-data-flow-and-transport.md  README.md
docs/superpowers/plans/: 2026-04-26-live-runtime-v0.md  2026-04-26-scaffold-workspace-v0.md  2026-04-27-frontend-scaffold.md  2026-04-27-ron-content-loading.md  2026-04-27-ws-transport-v0.md  2026-04-28-decision-runtime-v0.md  2026-04-28-mood-system.md  2026-04-28-personality-system-v0.md  2026-04-28-spatial-pass.md  2026-05-02-action-memories.md  2026-05-02-interaction-positions.md  2026-05-02-world-scene-v0.md  2026-05-09-intent-surface-v0.md
docs/superpowers/specs/: 2026-04-26-live-runtime-v0-design.md  2026-04-26-scaffold-workspace-v0-design.md  2026-04-27-frontend-scaffold-design.md  2026-04-27-ron-content-loading-design.md  2026-04-27-ws-transport-v0-design.md  2026-04-28-decision-runtime-v0-design.md  2026-04-28-mood-system-design.md  2026-04-28-personality-system-design.md  2026-04-28-spatial-pass-design.md  2026-05-02-action-memories-design.md  2026-05-02-interaction-positions-design.md  2026-05-02-world-scene-v0-design.md  2026-05-09-intent-surface-v0-design.md
