[package]
name = "gecko-sim-content"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gecko-sim content: RON loaders for object/accessory catalogs (later)."

[dependencies]
gecko-sim-core.workspace = true
serde.workspace = true
thiserror.workspace = true
ron.workspace = true

[lints]
workspace = true
