[package]
name = "gecko-sim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gecko-sim core: schema types and (later) ECS-based simulation engine."

[dependencies]
serde.workspace = true
thiserror.workspace = true
bevy_ecs.workspace = true
bitflags.workspace = true
glam.workspace = true
rand.workspace = true
rand_pcg.workspace = true
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
ron.workspace = true

[features]
export-ts = ["dep:ts-rs"]

[lints]
workspace = true
