[package]
name = "gecko-sim-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gecko-sim protocol: wire types shared with the frontend (later)."

[dependencies]
gecko-sim-core.workspace = true
serde.workspace = true

[lints]
workspace = true
